--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-    <title>Portifólio-VG</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <title>Portfólio-VG</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
-    
+         <div class="container">
+
+          <header>
+                 <div class="img-wrapper">
+                     <img src="img/backgroud.jpg" alt="">
+                </div>
+
+                <div class="banner">
+                  <h1>Web Deseloper & Front End Designer</h1>
+                  <p>Vitor Gonçalves Rodrigues</p>
+                  <button>Saiba mais</button>
+                </div>
+            
+          </header>
+          </div>
+
 </body>
 </html>
