:package: Grid Layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             
           </header>
-          <div class="sidebar">
+          <aside class="sidebar">
             <nav>
               <ul class="menu">
                 <li class="menu-item"><a href="" class="menu-link">Home</a></li>
@@ -45,7 +45,83 @@
               <a href=""><i class="fab fa-github-square"></i></a>
               <a href=""><i class="fab fa-instagram-square"></i></a>
             </div>
+          </aside>
+          <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+              <h1>Conhecimento</h1><br>
+            </div>
+            <div class="conhecimentos">
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fab fa-html5"></i>
+                <h3>HTML</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fab fa-bootstrap"></i>
+                <h3>Bootstrap</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fab fa-css3-alt"></i>
+                <h3>CSS</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fas fa-pencil-alt"></i>
+                <h3>Design</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fab fa-js"></i>
+                <h3>Javascript</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento">
+              <div class="conhecimento-header">
+                <i class="fab fa-github"></i>
+                <h3>Git e GitHub</h3>
+              </div>
+              <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
+                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
+                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              </div>
+            </div>
+            <div class="conhecimento-img-wrapper">
+                 <img src="" alt="">
+            </div>
           </div>
+          </section>
           </div>
 
 </body>
