"package" Configurado projetos e imagem conhecimento

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="banner">
-                  <h1>Web Deseloper & Front End Designer</h1>
+                  <h1>Web Developer & Front End Designer</h1>
                   <p>Vitor Gonçalves Rodrigues</p>
                   <button>Saiba mais</button>
                 </div>
@@ -118,11 +118,58 @@
               </div>
             </div>
             <div class="conhecimento-img-wrapper">
-                 <img src="" alt="">
+                 <img src="img/conhecimentos.png" alt="">
             </div>
           </div>
           </section>
           </div>
+          <section class ="sessao-projetos">
+            <div class="sessao-header-card">
+              <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+              <div class="card">
+                <div class="card-img-wrapper">
+                <img src="img/proj1.jpg" alt="imagem do projeto toDo">
+                </div>
+                <div class="card-info">
+                  <h2>ToDo List</h2>
+                  <h3>Javascript</h3>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo quod totam consequatur
+                     incidunt nemo nihil, magnam perferendis dolorum. Modi voluptatum magni cumque iusto 
+                     accusamus quasi est ex vero reprehenderit eos!</p>
+                  <button>Saiba mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="img/proj2.jpg" alt="imagem do projeto Maratona">
+                </div>
+                <div class="card-info">
+                  <h2>Maratona</h2>
+                  <h3>Html, CSS</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quidem, 
+                    cumque id delectus laboriosam aliquam sint impedit similique iure ut soluta 
+                    quibusdam ducimus possimus, est voluptatum harum earum quia hic.</p>
+                  <button>Saiba mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="img/proj3.jpg" alt="imagem do projeto Casa Bela">
+                </div>
+                <div class="card-info">
+                  <h2>Casa Bela</h2>
+                  <h3>Html</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, quas 
+                    sapiente in iure nulla tenetur, quo error eius eveniet doloremque, ipsa minima
+                     accusamus inventore totam atque! Minus, similique. Est, nihil.
+                  </p>
+                  <button>Saiba mais</button>
+                </div>
+              </div>
+            </div>
+          </section>
 
 </body>
 <script src="script.js"></script>
