reformulação do site

--- a/index.html
+++ b/index.html
@@ -1,199 +1,187 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-    <title>Portfólio-VG</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-<link rel="manifest" href="site.webmanifest">
-</head>
-<body>
-         <div class="container">
-          <header>
-                 <div class="img-wrapper">
-                   <div class="hamburguer">
-                     <div class="line" id="line1"></div>
-                     <div class="line" id="line2"></div>
-                     <div class="line" id="line3"></div>
-                     <span>fechar</span>
-                   </div>
-                     <img src="img/backgroud.jpg" alt="">
-                </div>
 
-                <div class="banner">
-                  <h1>Web Developer & Front End Designer</h1>
-                  <p>Vitor Gonçalves Rodrigues</p>
-                  <button>Saiba mais</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Vitor7Goncalves</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/site.webmanifest">
+</head>
+
+<body>
+  <div class="container">
+    <div class="top-bar">
+      <img src="img/img/logo.png" class="logo" alt="">
+      <p>E-mail: vitor7goncalves@outlook.com</p>
+    </div>
+    <header>
+      <div class="img-wrapper">
+        <img src="img/img/backgroud.png" alt="">
+      </div>
+
+      <div class="banner">
+        <h1>Game developer and digital designer</h1>
+        <p>Vitor Gonçalves Rodrigues</p>
+      </div>
+    </header>
+    <div class="sessao-header-about-me">
+      <h1>About me</h1><br>
+    </div>
+    <div class="about-me-sessao">
+      <div class="about-me-filho">
+        <img src="img/img/me.png" alt="" class="me">
+        <div class="conhecimento-text">
+          <p class="about-me-text">My name is Vitor Gonçalves Rodrigues, I was born in Rio de Janeiro on May 2, 1982, I
+            live in Ribeirão Preto in the state of São Paulo.
+            I'm a developer and game designer. A little over 2 years ago I decided to migrate to digital
+            art. I worked in a startup that has an e-commerce project for 9 months. Today I work on game projects as a
+            freelance,
+            one of them is a game called Kami Kaido for a studio located in Porto - Portugal. Also I'm creating and
+            selling assets on the
+            Unity Assets Store. I am passionate about what I do, so much so that I consider it a hobby rather than a
+            job..</p>
+        </div>
+      </div>
+      <section class="sessao-conhecimentos">
+        <div class="sessao-header">
+          <h1>Features</h1><br>
+        </div>
+        <div class="features-area">
+          <div class="conhecimentos">
+            <div class="coluna1">
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <img src="img/img/C Sharp.png" alt="" style="width: 2.5rem;">
+                  <h3>C Sharp</h3>
                 </div>
-            
-          </header>
-          <aside class="sidebar">
-            <nav>
-              <ul class="menu">
-                <li class="menu-item"><a href="" class="menu-link">Home</a></li>
-                <li class="menu-item"><a href="" class="menu-link">Conhecimento</a></li>
-                <li class="menu-item"><a href="" class="menu-link">Projetos</a></li>
-                <li class="menu-item"><a href="" class="menu-link">Contatos</a></li>
-                <li class="menu-item"><a href="" class="menu-link">Orçamento</a></li>
-              </ul>
-            </nav>
-            <div class="social-media">
-              <a href=""><i class="fab fa-facebook-square"></i></a>
-              <a href=""><i class="fab fa-github-square"></i></a>
-              <a href=""><i class="fab fa-instagram-square"></i></a>
-            </div>
-          </aside>
-          <section class="sessao-conhecimentos">
-            <div class="sessao-header">
-              <h1>Conhecimento</h1><br>
-            </div>
-            <div class="conhecimentos">
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fab fa-html5"></i>
-                <h3>HTML</h3>
+                <div class="conhecimento-text">
+                  <p>I've been developing with C Sharp for just over 1 year. However, the longest time was within Unity.
+                    But I have small projects on GitHub where I used this tool. And of course, every day I learn more
+                    because my studies with C Sharp don't stop.</p>
+                </div>
               </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <img src="img/img/photoshop.png" alt="" style="width: 2.7rem;">
+                  <h3>Adobe Photoshop</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Adobe photoshop is used to create digital art. The version I'm currently working on is 2019. All
+                    the art I created in my projects was 97% through Photoshop. As I said about myself, I migrated about
+                    2 years ago to digital art. Because I spent my whole life drawing and painting in a conventional
+                    way.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-css3-alt"></i>
+                  <h3>CSS</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>And to complete the front-end trio, I couldn't leave out the CSS. As well as Javascript and HTML,
+                    I've been studying CSS since September 2020. And along with the other technologies, I created some
+                    projects that are on my GitHub, and I also used them at Big2be.</p>
+                </div>
               </div>
             </div>
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fab fa-bootstrap"></i>
-                <h3>Bootstrap</h3>
+            <div class="coluna2">
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <img src="img/img/unity.png" alt="" style="width: 2.5rem;">
+                  <h3>Unity</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>The technology I use the most right now. With Unity I created and published my first game on Steam,
+                    Magus Pocus. Unity is a development engine that uses the C Sharp programming language, more common
+                    to
+                    create 2D and 3D games, but, as far as I know there are professionals who work with this tool also
+                    to
+                    develop NFT's</p>
+                </div>
               </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-js"></i>
+                  <h3>Javascript</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>I've been learning about Javascript since September 2020. Despite focusing more on C# and Unity, I
+                    worked at a company located in Ribeirão Preto - SP called Big2be, using my knowledge and Javascript.
+                    Company specialized in e-commerce for supermarkets, restaurants and the like.</p>
+                </div>
               </div>
-            </div>
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fab fa-css3-alt"></i>
-                <h3>CSS</h3>
-              </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
-              </div>
-            </div>
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fas fa-pencil-alt"></i>
-                <h3>Design</h3>
-              </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
-              </div>
-            </div>
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fab fa-js"></i>
-                <h3>Javascript</h3>
-              </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
-              </div>
-            </div>
-            <div class="conhecimento">
-              <div class="conhecimento-header">
-                <i class="fab fa-github"></i>
-                <h3>Git e GitHub</h3>
-              </div>
-              <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero nemo praesentium 
-                  officiis, eos corrupti excepturi quaerat minus rerum minima commodi tenetur tempore, 
-                  odit aliquid similique, ullam est. Illum, veniam optio!</p>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <img src="img/img/html-5.png" alt="" style="width: 2rem;">
+                  <h3>HTML</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>I've been studying and improving myself in HTML along with Javascript. And just like in JS, I used
+                    HTML in my personal projects and in the company mentioned above.</p>
+                </div>
               </div>
             </div>
             <div class="conhecimento-img-wrapper">
-                 <img src="img/conhecimentos.png" alt="">
             </div>
           </div>
-          </section>
+      </section>
+      <section class="sessao-projetos">
+        <div class="sessao-header-card">
+          <h1>Projets</h1>
+        </div>
+        <div class="section-project">
+          <div class="projets-video">
+            <video controls class="video-sessao">
+              <source src="https://youtu.be/2Op61l0WatY" type="video">
+            </video>
+            <div class="project-text">
+              <h3>Game I developed and sell on Steam</h3>
+              <p>Magus Pocus is a 2D platform game. I created it a few months ago and it took 6 months for it to be
+                completed. I developed it from scratch and all art and programming was done by me.</p>
+                <a href="" class="button-link">Know more</a>
+            </div>
           </div>
-          <section class ="sessao-projetos">
-            <div class="sessao-header-card">
-              <h1>Projetos</h1>
+        </div>
+        <div class="section-project">
+          <div class="projets-video">
+            <video controls class="video-sessao">
+              <source src="https://youtu.be/QX8sv36jnLg" type="video">
+            </video>
+            <div class="project-text">
+              <h3>Paradise Beach Assets for Games</h3>
+              <p>Paradise Beach are assets that contain some images for creating scenarios in games. Contains 3
+                variations of stems and coconut tree tops for you to combine and create different types of coconut
+                trees, bushes, beach background, rocks and ground.</p>
+                <a href="" class="button-link">Know more</a>
             </div>
-            <div class="projetos">
-              <div class="card">
-                <div class="card-img-wrapper">
-                <img src="img/proj1.jpg" alt="imagem do projeto toDo">
-                </div>
-                <div class="card-info">
-                  <h2>ToDo List</h2>
-                  <h3>Javascript</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo quod totam consequatur
-                     incidunt nemo nihil, magnam perferendis dolorum. Modi voluptatum magni cumque iusto 
-                     accusamus quasi est ex vero reprehenderit eos!</p>
-                  <button>Saiba mais</button>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-img-wrapper">
-                  <img src="img/proj2.jpg" alt="imagem do projeto Maratona">
-                </div>
-                <div class="card-info">
-                  <h2>Maratona</h2>
-                  <h3>Html, CSS</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quidem, 
-                    cumque id delectus laboriosam aliquam sint impedit similique iure ut soluta 
-                    quibusdam ducimus possimus, est voluptatum harum earum quia hic.</p>
-                  <button>Saiba mais</button>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-img-wrapper">
-                  <img src="img/proj3.jpg" alt="imagem do projeto Casa Bela">
-                </div>
-                <div class="card-info">
-                  <h2>Casa Bela</h2>
-                  <h3>Html</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, quas 
-                    sapiente in iure nulla tenetur, quo error eius eveniet doloremque, ipsa minima
-                     accusamus inventore totam atque! Minus, similique. Est, nihil.
-                  </p>
-                  <button>Saiba mais</button>
-                </div>
-              </div>
+          </div>
+        </div>
+        <div class="section-project">
+          <div class="projets-video">
+            <video  controls class="video-sessao">
+              <source src="https://youtu.be/Bvrq5t6KX8s" type="video">
+            </video>
+            <div class="project-text">
+              <h3>Netflix Clone</h3>
+              <p>I recreated the Netflix page on Jan 7th. 2021, to improve my knowledge in Javascript, HTML and CSS.
+                Access my GitHub if you want the source code.</p>
+                <a href="" class="button-link">Know more</a>
             </div>
-          </section>
-            <section class="sessao-contato">
-              <div class="contato-wrapper">
-                <div class="contato-left"></div>
-                <div class="contato-right">
-                    <h1>Contato</h1>
-                    <form>
-                      <div class="input-group">
-                        <input type="text" class="field" id="nome">
-                        <label for="nome" class="field-label">Nome</label>
-                      </div>
-                      <div class="input-group">
-                        <input type="text" class="field" id="email">
-                        <label for="email" class="field-label">E-mail</label>
-                      </div>
-                      <div class="input-group">
-                        <textarea class="field" id="mensagem"></textarea>
-                        <label for="mensagem" class="field-label">Mensagem</label>
-                      </div>
-                      <button type="submit">Enviar</button>
-                    </form>
-                </div>
-              </div>
-            </section>
-
+          </div>
+        </div>
+        <div class="social-media">
+          <a href=""><i class="fab fa-facebook-square"></i></a>
+          <a href=""><i class="fab fa-github-square"></i></a>
+          <a href=""><i class="fab fa-instagram-square"></i></a>
+        </div>
+      </section>
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
+
 </html>
