Criação do roda pé

--- a/index.html
+++ b/index.html
@@ -135,50 +135,60 @@
         </div>
         <div class="section-project">
           <div class="projets-video">
-            <video controls class="video-sessao">
-              <source src="https://youtu.be/2Op61l0WatY" type="video">
-            </video>
+            <iframe class="video-sessao1" src="https://www.youtube.com/embed/2Op61l0WatY" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
             <div class="project-text">
               <h3>Game I developed and sell on Steam</h3>
               <p>Magus Pocus is a 2D platform game. I created it a few months ago and it took 6 months for it to be
                 completed. I developed it from scratch and all art and programming was done by me.</p>
-                <a href="" class="button-link">Know more</a>
+              <a href="https://store.steampowered.com/app/2101760/Magus_Pocus/" class="button-link">Know more</a>
             </div>
           </div>
         </div>
         <div class="section-project">
           <div class="projets-video">
-            <video controls class="video-sessao">
-              <source src="https://youtu.be/QX8sv36jnLg" type="video">
-            </video>
+            <iframe class="video-sessao2" src="https://www.youtube.com/embed/QX8sv36jnLg" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
             <div class="project-text">
               <h3>Paradise Beach Assets for Games</h3>
               <p>Paradise Beach are assets that contain some images for creating scenarios in games. Contains 3
                 variations of stems and coconut tree tops for you to combine and create different types of coconut
                 trees, bushes, beach background, rocks and ground.</p>
-                <a href="" class="button-link">Know more</a>
+              <a href="https://assetstore.unity.com/publishers/78812?preview=1" class="button-link">Know more</a>
             </div>
           </div>
         </div>
         <div class="section-project">
           <div class="projets-video">
-            <video  controls class="video-sessao">
-              <source src="https://youtu.be/Bvrq5t6KX8s" type="video">
-            </video>
+            <iframe class="video-sessao3" src="https://www.youtube.com/embed/Bvrq5t6KX8s" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
             <div class="project-text">
               <h3>Netflix Clone</h3>
               <p>I recreated the Netflix page on Jan 7th. 2021, to improve my knowledge in Javascript, HTML and CSS.
                 Access my GitHub if you want the source code.</p>
-                <a href="" class="button-link">Know more</a>
+              <a href="https://github.com/vitor7goncalves/Netflix-clone" class="button-link">Know more</a>
             </div>
           </div>
         </div>
         <div class="social-media">
-          <a href=""><i class="fab fa-facebook-square"></i></a>
-          <a href=""><i class="fab fa-github-square"></i></a>
-          <a href=""><i class="fab fa-instagram-square"></i></a>
+          <a href="https://www.facebook.com/sillenyus.vitor/"><i class="fab fa-facebook-square"></i></a>
+          <a href="https://github.com/vitor7goncalves"><i class="fab fa-github-square"></i></a>
+          <a href="https://www.instagram.com/goncalvesvitor7/"><i class="fab fa-instagram-square"></i></a>
+          <a href="https://www.linkedin.com/in/vitor-gon%C3%A7alves-rodrigues-1aa9b4110/"><img style="width: 1.8rem;"
+              src="img/img/linkedin_icon_135436.png" alt=""></i></a>
         </div>
       </section>
+      <footer class="session-footer">
+        <h3>
+          &copy; Vitor7Goncalves
+        </h3>
+      </footer>
     </div>
   </div>
 </body>
