--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="top-bar">
       <img src="img/img/logo.png" class="logo" alt="">
-      <p>E-mail: vitor7goncalves@outlook.com</p>
+      <p>E-mail: me@vitor7goncalves.gq</p>
     </div>
     <header>
       <div class="img-wrapper">
