--- a/index.html
+++ b/index.html
@@ -175,6 +175,21 @@
             </div>
           </div>
         </div>
+        <div class="section-project">
+          <div class="projets-video">
+            <iframe class="video-sessao3" src="https://www.youtube.com/watch?v=wisCyF4aJws" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+            <div class="project-text">
+              <h3>Netflix Clone</h3>
+              <p>A simple game that simulates dice scrolling made in Unity 2D. The game is open source.
+                To use, create a new project and replace the "Assets" folder.
+                Access my GitHub if you want the source code.</p>
+              <a href="https://github.com/vitor7goncalves/Dices" class="button-link">Know more</a>
+            </div>
+          </div>
+        </div>
         <div class="social-media">
           <a href="https://www.facebook.com/sillenyus.vitor/"><i class="fab fa-facebook-square"></i></a>
           <a href="https://github.com/vitor7goncalves"><i class="fab fa-github-square"></i></a>
