--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="section-project">
           <div class="projets-video">
-            <iframe class="video-sessao3" src="https://youtu.be/wisCyF4aJws" title="YouTube video player"
+            <iframe class="video-sessao3" src="https://www.youtube.com/embed/wisCyF4aJws" title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
