--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
             <div class="project-text">
-              <h3>Netflix Clone</h3>
+              <h3>Roll Dices</h3>
               <p>A simple game that simulates dice scrolling made in Unity 2D. The game is open source.
                 To use, create a new project and replace the "Assets" folder.
                 Access my GitHub if you want the source code.</p>
