--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
         </div>
         <div class="section-project">
           <div class="projets-video">
-            <iframe class="video-sessao3" src="https://www.youtube.com/embed/wisCyF4aJws" title="YouTube video player"
+            <iframe class="video-sessao4" src="https://www.youtube.com/embed/wisCyF4aJws" title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
             <div class="project-text">
               <h3>Roll Dices</h3>
-              <p>A simple game that simulates dice scrolling made in Unity 2D. The game is open source.
-                To use, create a new project and replace the "Assets" folder.
+              <p>A simple game that simulates dice scrolling made in Unity 2D. <br/>
+                The game is open source and to use create a new project and replace the "Assets" folder.
                 Access my GitHub if you want the source code.</p>
               <a href="https://github.com/vitor7goncalves/Dices" class="button-link">Know more</a>
             </div>
