--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               allowfullscreen></iframe>
             <div class="project-text">
               <h3>Roll Dices Game</h3>
-              <p>A simple game that simulates dice scrolling made in Unity 2D. <br /> The game is open source and to use create a new project and <br />  replace the "Assets" folder.
+              <p>A simple game that simulates dice scrolling made in Unity 2D. The game is open source and to use create a new project and replace the "Assets" folder.
                 Access my GitHub if you want the source code.</p>
               <a href="https://github.com/vitor7goncalves/Dices" class="button-link">Know more</a>
             </div>
